# juhps-server

./: .gitignore  2023_04_05_ServerLog  CMakeLists.txt  Doxyfile  Makefile  README.md  generate.sh  main.cpp  server
cmake/: utils.cmake
jujimeizuo/: address.h  bytearray.h  config.cc  config.h  daemon.h  endian.h  env.cc  env.h  fiber.h  hook.h  iomanager.h  jujimeizuo.h  log.cpp  log.h  macro.h  mutex.h  noncopyable.h  scheduler.cc  scheduler.h  singleton.h  socket.cc  socket.h  stream.h  tcp_server.cc  tcp_server.h  thread.h  timer.h  uri.h  util.h
jujimeizuo/http/: http.cc  http.h  http_connection.h  http_parser.cc  http_parser.h  http_server.cc  http_server.h  http_session.h  servlet.h
jujimeizuo/streams/: socket_stream.h
lib/: libsrc.dylib
src/: address.cc  address.h  application.cc  application.h  bytearray.cc  bytearray.h  config.cc  config.h  daemon.cc  daemon.h  endian.h  env.cc  env.h  fd_manager.cc  fd_manager.h  fiber.cc  fiber.h  hook.cc  hook.h  iomanager.cc  iomanager.h  jujimeizuo.h  library.cc  library.h  log.cc  log.h  macro.h  main.cc  module.cc  module.h  mutex.cc  mutex.h  noncopyable.h  protocol.cc  protocol.h  scheduler.cc  scheduler.h  singleton.h  socket.cc  socket.h  (+18 more)
src/db/: db.h  fox_thread.cc  fox_thread.h  mysql.cc  mysql.h  redis.cc  redis.h  sqlite3.cc  sqlite3.h
src/http/: http.cc  http.h  http_connection.cc  http_connection.h  http_parser.cc  http_parser.h  http_server.cc  http_server.h  http_session.cc  http_session.h  servlet.cc  servlet.h  session_data.cc  session_data.h  ws_connection.cc  ws_connection.h  ws_server.cc  ws_server.h  ws_servlet.cc  ws_servlet.h  ws_session.cc  ws_session.h
src/http/servlets/: config_servlet.cc  config_servlet.h  status_servlet.cc  status_servlet.h
src/ns/: name_server_module.cc  name_server_module.h  ns_client.cc  ns_client.h  ns_protobuf.proto  ns_protocol.cc  ns_protocol.h
src/rock/: rock_protocol.cc  rock_protocol.h  rock_server.cc  rock_server.h  rock_stream.cc  rock_stream.h
src/streams/: async_socket_stream.cc  async_socket_stream.h  load_balance.cc  load_balance.h  service_discovery.cc  service_discovery.h  socket_stream.cc  socket_stream.h  zlib_stream.cc  zlib_stream.h
src/util/: crypto_util.cc  crypto_util.h  hash_util.cc  hash_util.h  json_util.cc  json_util.h
template/: CMakeLists.txt  move.sh
template/static/: index.html
template/static/css/: btn.css
template/template/: my_module.cc  my_module.h
tests/: test.cc  test_address.cc  test_bytearray.cc  test_config.cc  test_daemon.cc  test_env.cc  test_fiber.cc  test_fiber2.cc  test_hook.cc  test_http.cc  test_http_connection.cc  test_http_parser.cc  test_http_server.cc  test_iomanager.cc  test_log.cpp  test_scheduler.cc  test_socket_tcp_client.cc  test_socket_tcp_server.cc  test_tcp_server.cc  test_thread.cc  test_timer.cc  test_uri.cc  test_util.cpp
